--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/prompt-sync": "^4.2.3",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "prettier": "^3.6.2",
@@ -18,6 +19,7 @@
   "dependencies": {
     "-": "^0.0.1",
     "D": "^1.0.0",
+    "prompt-sync": "^4.2.0",
     "ts-node": "^10.9.2"
   }
 }
